Fixed up colours and edits on table wrapping

--- a/ui/admin-portal/src/app/components/candidates/home.component.scss
+++ b/ui/admin-portal/src/app/components/candidates/home.component.scss
@@ -1,4 +1,4 @@
 #savedSearchSubtype {
-    width: 21em;
+    width: 25em;
 }
 
