--- a/ui/admin-portal/src/scss/_variables.scss
+++ b/ui/admin-portal/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $color-primary-lightest: #e9f7fc;
 $color-primary-lighter: #a7e2f4;
-$color-primary-light: #4fc6ea;
-$color-primary: #0eb1e3;
+$color-primary-light: #0cd5e4;
+$color-primary: #13b1dd;
 $color-primary-dark: #0b81a6;
 $color-primary-darker: #075168;
 
@@ -14,7 +14,7 @@ $color-accent-darker: #655913;
 
 $color-text-primary: #272b2b;
 $color-text-secondary: #888888;
-$color-text-inactive: #b0b1b1;
+$color-text-inactive: #dedede;
 
 $color-border: #d7d8d8;
 $color-background: #f2f2f2;
