--- a/ui/admin-portal/src/scss/common.scss
+++ b/ui/admin-portal/src/scss/common.scss
@@ -17,11 +17,11 @@
 
 .link,
 .link:not([href]):not([tabindex]){
-  color: $color-primary;
+  color: $color-primary-darker;
   cursor: pointer;
   text-decoration: $link-decoration;
   &:hover {
-    color: $color-primary-darker;
+    color: $color-primary-dark;
     text-decoration: $link-hover-decoration;
   }
 }
@@ -60,6 +60,12 @@
     cursor: auto;
     background-color: $pagination-disabled-bg;
     border-color: $pagination-disabled-border-color;
+  }
+}
+
+table {
+  td {
+    white-space: nowrap;
   }
 }
 
